# rustracer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  material.rs  ray.rs  scene.rs  viewport.rs
src/material/: colour.rs  material.rs  mod.rs
src/primitives/: triangle.rs
