[package]
name = "rustracer"
version = "0.1.0"
authors = ["Mateusz Adamczyk <matek_a@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.1.0"
nalgebra = "0.23.1"
image = "0.23.4"
noise = "0.7.0"
rand = "0.8.0"
